[gd_scene load_steps=6 format=3 uid="uid://bgpbvjwjyab2g"]

[ext_resource type="PackedScene" path="res://scenes/player_full.tscn" id="1_7077t"]
[ext_resource type="Script" path="res://scripts/pose_editor/pose_editor_camera.gd" id="2_84yji"]
[ext_resource type="Script" path="res://scripts/pose_editor/rotation_editor.gd" id="3_oypvs"]

[sub_resource type="Environment" id="Environment_vfflu"]
background_mode = 1
background_color = Color(0.529412, 0.647059, 1, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.53

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_h6q85"]

[node name="pose_editor" type="Node2D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.916481, 0.400077, 0, -0.400077, -0.916481, 0, 2.52991, -2.47674)
light_energy = 0.543

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="HBoxContainer"]
environment = SubResource("Environment_vfflu")
camera_attributes = SubResource("CameraAttributesPractical_h6q85")

[node name="FreeLookCamera" type="Camera3D" parent="HBoxContainer"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.20628, -2.34576)
current = true
script = ExtResource("2_84yji")

[node name="player_full" parent="HBoxContainer" instance=ExtResource("1_7077t")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.20628, -2.34576)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("3_oypvs")

[node name="items" type="ItemList" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="x_label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "X Value"

[node name="x" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 360.0

[node name="y_label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Y Value"

[node name="y" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 360.0

[node name="z_label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Z Value"

[node name="z" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 360.0

[node name="bend_label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Bend Value"

[node name="bend" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 50.0

[connection signal="item_selected" from="HBoxContainer/VBoxContainer/items" to="HBoxContainer/VBoxContainer" method="_on_items_item_selected"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/x" to="HBoxContainer/VBoxContainer" method="_on_x_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/y" to="HBoxContainer/VBoxContainer" method="_on_y_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/z" to="HBoxContainer/VBoxContainer" method="_on_z_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/bend" to="HBoxContainer/VBoxContainer" method="_on_bend_value_changed"]
